--- a/build.gradle
+++ b/build.gradle
@@ -56,3 +56,7 @@ tasks.withType(JavaCompile).configureEach {
 tasks.withType(JavaCompile) {
     options.compilerArgs << "-parameters"
 }
+
+shadowJar {
+    archiveClassifier.set("")
+}
